Fix #1332 - Z-index issue on mobile onboarding

--- a/static/scss/partials/onboarding.scss
+++ b/static/scss/partials/onboarding.scss
@@ -401,7 +401,7 @@ firefox-private-relay-addon[data-addon-installed="true"] + firefox-private-relay
     width: 100%;
     text-align: center;
     position: sticky;
-    z-index: 2;
+    z-index: 1;
     bottom: 0;
     box-shadow: $box-shadow-sm;
 
